# libIRC

./: .gitignore  CMakeLists.txt  Makefile  README.md  gcov.sh  main.c  tests.c
include/: buffer.h  irc.h  t_mapstring.h  t_string.h
src/: buffer.c  channel.c  impl_mapstring.h  impl_string.h  irc_cmd_001.c  irc_cmd_005.c  irc_cmd_353.c  irc_cmd_join.c  irc_cmd_kick.c  irc_cmd_mode.c  irc_cmd_nick.c  irc_cmd_part.c  irc_cmd_ping.c  irc_cmd_quit.c  irc_commands.c  irc_eval_cmd.c  irc_handle_cmd.c  ircconnection.c  mapstring.c  mode_utils.c  string.c  tests.c  user.c
tests/: Makefile  tests.c
